[gd_scene load_steps=4 format=3 uid="uid://ckgv856rq1ht2"]

[ext_resource type="Texture2D" uid="uid://cws4awqr2xlow" path="res://Assets/roulette/wheel_to_convert.png" id="1_7xhw3"]
[ext_resource type="Script" uid="uid://hqfbtyer88ah" path="res://Scripts/wheel.gd" id="2_ywjgn"]
[ext_resource type="Texture2D" uid="uid://bds7osfx60ln4" path="res://Assets/roulette/arrow_down.png" id="3_mmknh"]

[node name="roulette" type="Node2D"]

[node name="wheel" type="Sprite2D" parent="."]
position = Vector2(256, 353.5)
scale = Vector2(0.996094, 1.00586)
texture = ExtResource("1_7xhw3")
script = ExtResource("2_ywjgn")

[node name="Button" type="Button" parent="."]
offset_left = 87.0
offset_top = 593.0
offset_right = 166.0
offset_bottom = 645.0
text = "Start"

[node name="BetInput" type="LineEdit" parent="."]
offset_left = 1.0
offset_top = 593.0
offset_right = 87.0
offset_bottom = 645.0
text = "100"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(277, 112)
scale = Vector2(0.222656, 0.222656)
texture = ExtResource("3_mmknh")

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 535.0
offset_top = 159.0
offset_right = 1729.0
offset_bottom = 394.0
columns = 14

[node name="VBoxContainer0" type="VBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="GridContainer/VBoxContainer0"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "0"

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="GridContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "3"

[node name="Button2" type="Button" parent="GridContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "2"

[node name="Button3" type="Button" parent="GridContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "1"

[node name="VBoxContainer2" type="VBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="GridContainer/VBoxContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "6"

[node name="Button2" type="Button" parent="GridContainer/VBoxContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "5"

[node name="Button3" type="Button" parent="GridContainer/VBoxContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "4"

[node name="VBoxContainer3" type="VBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="GridContainer/VBoxContainer3"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "9"

[node name="Button2" type="Button" parent="GridContainer/VBoxContainer3"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "8"

[node name="Button3" type="Button" parent="GridContainer/VBoxContainer3"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "7"

[node name="VBoxContainer4" type="VBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="GridContainer/VBoxContainer4"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "12"

[node name="Button2" type="Button" parent="GridContainer/VBoxContainer4"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "11"

[node name="Button3" type="Button" parent="GridContainer/VBoxContainer4"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "10"

[node name="VBoxContainer5" type="VBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="GridContainer/VBoxContainer5"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "15"

[node name="Button2" type="Button" parent="GridContainer/VBoxContainer5"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "14"

[node name="Button3" type="Button" parent="GridContainer/VBoxContainer5"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "13"

[node name="VBoxContainer6" type="VBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="GridContainer/VBoxContainer6"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "18"

[node name="Button2" type="Button" parent="GridContainer/VBoxContainer6"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "17"

[node name="Button3" type="Button" parent="GridContainer/VBoxContainer6"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "16"

[node name="VBoxContainer7" type="VBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="GridContainer/VBoxContainer7"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "21"

[node name="Button2" type="Button" parent="GridContainer/VBoxContainer7"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "20"

[node name="Button3" type="Button" parent="GridContainer/VBoxContainer7"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "19"

[node name="VBoxContainer8" type="VBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="GridContainer/VBoxContainer8"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "24"

[node name="Button2" type="Button" parent="GridContainer/VBoxContainer8"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "23"

[node name="Button3" type="Button" parent="GridContainer/VBoxContainer8"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "22"

[node name="VBoxContainer9" type="VBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="GridContainer/VBoxContainer9"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "27"

[node name="Button2" type="Button" parent="GridContainer/VBoxContainer9"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "26"

[node name="Button3" type="Button" parent="GridContainer/VBoxContainer9"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "25"

[node name="VBoxContainer10" type="VBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="GridContainer/VBoxContainer10"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "30"

[node name="Button2" type="Button" parent="GridContainer/VBoxContainer10"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "29"

[node name="Button3" type="Button" parent="GridContainer/VBoxContainer10"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "28"

[node name="VBoxContainer11" type="VBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="GridContainer/VBoxContainer11"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "33"

[node name="Button2" type="Button" parent="GridContainer/VBoxContainer11"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "32"

[node name="Button3" type="Button" parent="GridContainer/VBoxContainer11"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "31"

[node name="VBoxContainer12" type="VBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="GridContainer/VBoxContainer12"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "36"

[node name="Button2" type="Button" parent="GridContainer/VBoxContainer12"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "35"

[node name="Button3" type="Button" parent="GridContainer/VBoxContainer12"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
text = "34"

[node name="GridContainer2" type="GridContainer" parent="."]
offset_left = 589.0
offset_top = 398.0
offset_right = 1233.0
offset_bottom = 442.0
columns = 6

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="GridContainer2/HBoxContainer"]
custom_minimum_size = Vector2(212, 0)
layout_mode = 2
text = "1st 12"

[node name="Button2" type="Button" parent="GridContainer2/HBoxContainer"]
custom_minimum_size = Vector2(212, 0)
layout_mode = 2
text = "2nd 12"

[node name="Button3" type="Button" parent="GridContainer2/HBoxContainer"]
custom_minimum_size = Vector2(212, 0)
layout_mode = 2
text = "3rd 12"

[node name="GridContainer3" type="GridContainer" parent="."]
offset_left = 589.0
offset_top = 433.0
offset_right = 1233.0
offset_bottom = 477.0
columns = 6

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="GridContainer3/HBoxContainer"]
custom_minimum_size = Vector2(104, 0)
layout_mode = 2
text = "1-18"

[node name="Button2" type="Button" parent="GridContainer3/HBoxContainer"]
custom_minimum_size = Vector2(104, 0)
layout_mode = 2
text = "EVEN"

[node name="Button3" type="Button" parent="GridContainer3/HBoxContainer"]
custom_minimum_size = Vector2(104, 0)
layout_mode = 2
text = "RED"

[node name="Button4" type="Button" parent="GridContainer3/HBoxContainer"]
custom_minimum_size = Vector2(104, 0)
layout_mode = 2
text = "BLACK"

[node name="Button5" type="Button" parent="GridContainer3/HBoxContainer"]
custom_minimum_size = Vector2(104, 0)
layout_mode = 2
text = "ODD"

[node name="Button6" type="Button" parent="GridContainer3/HBoxContainer"]
custom_minimum_size = Vector2(104, 0)
layout_mode = 2
text = "19-36"

[node name="Button2" type="Button" parent="."]
offset_left = 1635.0
offset_top = 2.0
offset_right = 1731.0
offset_bottom = 54.0
text = "Wyjdź"

[connection signal="pressed" from="Button2" to="wheel" method="_on_button_2_pressed"]
